# LossyLine

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  lossylin.cpp  lossylin.h
tests/: CMakeLists.txt  TestLossyLin.cpp
testsData/: data.json  data2.txt
